Fix horizontal overflow on mobile v2

--- a/src/styles/components.scss
+++ b/src/styles/components.scss
@@ -5,7 +5,7 @@
 
 // container
 .container {
-  @apply mx-auto max-w-[1202px] md:px-3;
+  @apply mx-auto max-w-[1202px] xl:px-3;
 }
 
 // form style
